# rocket-docs-gen-test

./: Cargo.toml  README.md
src/: ast_formatting.rs  main.rs  rocket_attribute.rs  rocket_enum.rs  rocket_route.rs  rocket_struct.rs
