[package]
name = "rocket-doc-gen"
version = "0.1.0"
authors = ["rmu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
quote = "1.0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"